feat: add favicon, change LayoutBlock width, add cyrillic fonts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,8 +11,8 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lugrasimo&family=Pacifico&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap" rel="stylesheet">
-    <title>Shawarma App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lugrasimo&family=Pacifico&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swapd&subset=cyrillic-ext" rel="stylesheet">
+    <title>ШАВЕРМА</title>
   </head>
   <body>
     <div id="root"></div>
