refactor: replacr Lucrasymo font to Comfortaa

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lugrasimo&family=Pacifico&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swapd&subset=cyrillic-ext" rel="stylesheet">
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700family=Pacifico&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swapd"
+      rel="stylesheet" />
     <title>ШАВЕРМА</title>
   </head>
   <body>
